[gd_scene load_steps=7 format=3 uid="uid://6b34kvmua8en"]

[ext_resource type="Script" uid="uid://bo172u486o7ed" path="res://Scripts/game_manager.gd" id="1_6ev3c"]
[ext_resource type="PackedScene" uid="uid://byrtnruin0av0" path="res://Scenes/sky_background.tscn" id="1_iacmt"]
[ext_resource type="PackedScene" uid="uid://ceng5l5etslv7" path="res://Scenes/ground.tscn" id="2_6ev3c"]
[ext_resource type="PackedScene" uid="uid://l1vbnhrgi5bv" path="res://Scenes/platform.tscn" id="3_maf8m"]
[ext_resource type="PackedScene" uid="uid://cdd86lgxtvlk1" path="res://Scenes/player_dog.tscn" id="4_huasi"]
[ext_resource type="PackedScene" uid="uid://bf42vps3m8j8x" path="res://Scenes/bone_collectible.tscn" id="5_m1efj"]

[node name="Level" type="Node2D"]

[node name="SkyBackground" parent="." instance=ExtResource("1_iacmt")]
z_index = -4
position = Vector2(-17, 6)

[node name="Game_Manager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_6ev3c")

[node name="Score_Label" type="RichTextLabel" parent="Game_Manager"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 70.0
theme_override_colors/font_outline_color = Color(0.38738903, 0.387389, 0.38738894, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
text = "Score: 00"

[node name="Timer_Label" type="RichTextLabel" parent="Game_Manager"]
unique_name_in_owner = true
offset_left = 1650.0
offset_top = 20.0
offset_right = 1850.0
offset_bottom = 70.0
theme_override_colors/font_outline_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
text = "Time: "

[node name="Intro_Label" type="RichTextLabel" parent="Game_Manager"]
offset_left = 705.0
offset_top = 129.0
offset_right = 1247.0
offset_bottom = 369.0
theme_override_colors/font_outline_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 50
text = "Welcome, The Time Starts When You Move
"
horizontal_alignment = 1

[node name="End_Label" type="RichTextLabel" parent="Game_Manager"]
offset_left = 705.0
offset_top = 129.0
offset_right = 1247.0
offset_bottom = 369.0
theme_override_colors/font_outline_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 50
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Game_Manager"]
wait_time = 15.0
one_shot = true

[node name="Ground" parent="." instance=ExtResource("2_6ev3c")]
z_index = -3
position = Vector2(-86, 980)

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("3_maf8m")]
position = Vector2(215, 668.74097)

[node name="Platform2" parent="Platforms" instance=ExtResource("3_maf8m")]
position = Vector2(1277, 669)

[node name="Platform3" parent="Platforms" instance=ExtResource("3_maf8m")]
position = Vector2(225, 189)

[node name="Platform4" parent="Platforms" instance=ExtResource("3_maf8m")]
position = Vector2(740, 436.26227)

[node name="Platform5" parent="Platforms" instance=ExtResource("3_maf8m")]
position = Vector2(1281, 175.71854)

[node name="DogCharacter" parent="." instance=ExtResource("4_huasi")]
z_index = 3
position = Vector2(990, 1018)

[node name="Collectibles" type="Node" parent="."]

[node name="Bone_Collectible" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(1362, 626)

[node name="Bone_Collectible2" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(505, 144)

[node name="Bone_Collectible3" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(1010, 395)

[node name="Bone_Collectible4" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(837, 392)

[node name="Bone_Collectible5" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(480, 625)

[node name="Bone_Collectible6" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(310, 631)

[node name="Bone_Collectible7" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(1556, 130)

[node name="Bone_Collectible8" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(1373, 135)

[node name="Bone_Collectible9" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(304, 146)

[node name="Bone_Collectible10" parent="Collectibles" instance=ExtResource("5_m1efj")]
position = Vector2(1551, 627)

[connection signal="timeout" from="Game_Manager/Timer" to="Game_Manager" method="_on_timer_timeout"]
